<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroun_add_user">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/lefticon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="4dp"
            android:clickable="true"
            android:src="@drawable/ic_baseline_arrow_back_24"></ImageView>

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="ADD USER"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"></TextView>
        <View
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/horizontal_line"
            android:layout_marginTop="80dp"></View>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        >


        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custum_input"
            android:drawableStart="@drawable/contact"
            android:drawablePadding="12dp"
            android:hint="@string/First_Name"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"></EditText>

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/custum_input"
            android:drawableStart="@drawable/contact"
            android:drawablePadding="12dp"
            android:hint="@string/Last_Name"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"></EditText>

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:background="@drawable/custum_input"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="12dp"
            android:hint="@string/phone"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"></EditText>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:background="@drawable/custum_input"
            android:drawableStart="@drawable/email"
            android:drawablePadding="12dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"></EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DATE"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="220dp"
            android:layout_gravity="center_horizontal"></TextView>
        <EditText
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="255dp"
            android:background="@drawable/custum_input"
            android:drawableStart="@drawable/date"
            android:drawablePadding="12dp"
            android:hint="@string/Start_Date"
            android:inputType="date"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:id="@+id/start_date"></EditText>
        <EditText
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="255dp"
            android:layout_marginLeft="170dp"
            android:background="@drawable/custum_input"
            android:drawableStart="@drawable/date"
            android:drawablePadding="12dp"
            android:hint="@string/Finish_Date"
            android:inputType="date"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:id="@+id/finish_date"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="MISSION"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="300dp"
            android:layout_gravity="center_horizontal"></TextView>

        <EditText
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="340dp"
            android:background="@drawable/custum_input"
            android:drawableStart="@drawable/place"
            android:drawablePadding="12dp"
            android:hint="@string/Start_Place"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:id="@+id/start_place"></EditText>
        <EditText
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="340dp"
            android:layout_marginLeft="170dp"
            android:background="@drawable/custum_input"
            android:drawableStart="@drawable/place"
            android:drawablePadding="12dp"
            android:hint="@string/Finish_Place"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:id="@+id/finish_place"></EditText>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="530dp">

        <Button
            android:text="ADD"
            android:id="@+id/add_user"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textSize="20dp"
            android:textColor="@color/teal_200"
            android:textColorHint="@color/white"
            android:textStyle="bold"></Button>



    </RelativeLayout>

</RelativeLayout>